--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ a {
   background-color: var(--accent-color);
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -1px;
   border-radius: 2px;
 }
 .service {
