--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,6 @@ a {
 
 .container {
   width: 1200px;
-
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
@@ -59,7 +58,7 @@ a {
   bottom: -1px;
   border-radius: 2px;
 }
-.service {
+.work-service {
   width: 100%;
   height: 70px;
   font-weight: 700;
@@ -76,7 +75,7 @@ a {
   justify-content: center;
 }
 
-.images .item {
+.work-list .work-item {
   position: relative;
 }
 .info {
@@ -104,9 +103,8 @@ a {
   transform: translateY(0);
 }
 
-.auth-icon {
+.contact-icon {
   fill: #757575;
-
   margin-right: 10px;
 }
 .link:hover,
@@ -149,8 +147,7 @@ a {
   gap: 10px;
   margin-top: 16px;
 }
-.icon-antenna {
-}
+
 .feature-background {
   width: 270px;
   height: 120px;
@@ -160,17 +157,17 @@ a {
   align-items: center;
 }
 
-.auth-link {
+.contact-link {
   padding-bottom: 32px;
   padding-top: 32px;
   display: flex;
   align-items: center;
 }
-.auth-link:hover,
-.auth-link:focus {
+.contact-link:hover,
+.contact-link:focus {
   color: var(--accent-color);
 }
-.auth-link:hover .auth-icon {
+.contact-link:hover .contact-icon {
   fill: var(--accent-color);
 }
 
@@ -277,10 +274,10 @@ a {
   margin-left: 93px;
 }
 
-.list {
+.navigation-list {
   display: flex;
 }
-.list .item:not(:last-child) {
+.navigation-list .navigation-item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -288,12 +285,12 @@ a {
   display: flex;
   margin-left: auto;
 }
-.contact .item:not(:last-child) {
+.contact-item:not(:last-child) {
   margin-right: 50px;
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.navigation-link:hover,
+.navigation-link:focus {
   color: var(--accent-color);
 }
 .nav-button {
@@ -303,7 +300,7 @@ a {
   margin-bottom: 50px;
 }
 
-.nav-link {
+.navigation-link {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -316,7 +313,7 @@ a {
 .link:hover {
   color: var(--accent-color);
 }
-.auth-link {
+.contact-link {
   color: #757575;
   font-weight: 500;
   font-size: 14px;
@@ -324,7 +321,7 @@ a {
   transition-duration: 250ms;
 }
 
-.hero {
+.section-hero {
   background-image: linear-gradient(to right, #2f303a66),
     url(../images/background-image.jpg);
 
@@ -349,7 +346,7 @@ a {
   text-align: center;
 }
 
-.images {
+.work-list {
   gap: 30px;
 }
 
@@ -357,21 +354,24 @@ a {
   padding-top: 94px;
   padding-bottom: 94px;
 }
+.feature-section{
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
-.person {
+.command-list {
   display: flex;
   gap: 30px;
   padding-left: 0;
-
   text-align: center;
   margin-top: 50px;
 }
-.person .item {
+.command-item {
   background-color: #ffffff;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-.employees {
+.command-employees {
   padding-top: 30px;
   padding-bottom: 30px;
 }
@@ -380,10 +380,9 @@ a {
   display: flex;
   flex-wrap: wrap;
   padding-left: 0;
-  /*padding-right: 0;*/
   gap: 30px;
 }
-.feature-list .item {
+.feature-list .feature-item {
   width: 270px;
 }
 
@@ -405,7 +404,7 @@ a {
   padding-bottom: 94px;
 }
 
-.section-header {
+.work-title {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -413,11 +412,11 @@ a {
   text-align: center;
   margin-bottom: 50px;
 }
-.images {
+.work-list {
   display: flex;
 }
 
-.priority-button {
+.hero-button {
   color: #ffffff;
   background-color: var(--accent-color);
   font-weight: 700;
@@ -453,12 +452,12 @@ a {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.section-list {
+.section-command {
   background-color: #f5f4fa;
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.section-title {
+.command-title {
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -466,7 +465,7 @@ a {
   text-align: center;
   margin-bottom: 50px;
 }
-.thirs-title {
+.command-person {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -532,8 +531,7 @@ a {
   margin-right: 70px;
   width: 321px;
 }
-.home-link {
-}
+
 .home-link .item {
   margin-top: 9px;
 }
