--- a/sass/main.scss
+++ b/sass/main.scss
@@ -223,5 +223,68 @@ gap: 30px;
   margin-top: 10px;
 }
 /*social*/
-
-
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 16px;
+}
+.social-link:hover,
+.social-link:focus {
+  background-color: var(--accent-color);
+}
+.social-link:hover .social-icon,
+.social-link:focus .social-icon {
+  fill: var(--white-color);
+}
+.social-link {
+      width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    padding: 0;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: #afb1b8;
+  transition-duration: 250ms;
+}
+.social-icon {
+  display: block;
+}
+/*company*/
+.company-section{
+  padding-top: 94px;
+  padding-bottom: 94px
+}
+.company-title{
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 100%;
+    text-align: center;
+    margin-bottom: 50px
+}
+.company-list{
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+}
+.company-item:hover {
+  border-color: var(--accent-color);
+}
+.company-link {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  transition-duration: 250ms;
+}
+.company-link:hover .company-icon,
+.company-link:focus .company-icon {
+  fill: var(--accent-color);
+}
+/*footer*/
