--- a/css/styles.css
+++ b/css/styles.css
@@ -203,11 +203,11 @@ a {
     fill: #afb1b8;
   transition-duration: 250ms;
 }
-.client-section{
+.client{
   padding-top: 94px;
     padding-bottom: 94px
 }
-.client-title{
+.section-title{
       color: var(--title-text-color);
     font-weight: 700;
     font-size: 36px;
@@ -363,7 +363,7 @@ a {
   transition-duration: 250ms;
 }
 
-.section-hero {
+.hero {
   background-image: linear-gradient(to right, #2f303a66),
     url(../images/background-image.jpg);
 
@@ -400,7 +400,7 @@ a {
    padding-top: 94px;
   padding-bottom: 94px;
 }
-.feature-section{
+.feature{
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -446,18 +446,11 @@ a {
   line-height: 1.71;
   margin-top: 10px;
 }
-.section-work {
+.work {
   padding-bottom: 94px;
 }
 
-.work-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-}
+
 .work-list {
   display: flex;
 }
@@ -498,19 +491,12 @@ a {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.section-command {
+.command {
   background-color: #f5f4fa;
   padding-top: 94px;
   padding-bottom: 94px;
 }
-.command-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-}
+
 .command-person {
   color: var(--title-text-color);
   font-weight: 500;
