--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,23 +1,3 @@
-$PrimerColor: #757575;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 :root {
   --primer-color: #757575;
@@ -99,8 +79,7 @@ a {
   font-weight: 700;
   font-size: 26px;
   line-height: 100%;
-
-  }
+ }
 
 /*navigation*/
 .navigation {
@@ -157,7 +136,7 @@ a {
 }
 
 /*hero*/
-.section-hero {
+.hero {
   background-image: linear-gradient(to right, #2f303a66),
     url(../images/background-image.jpg);
 
@@ -194,7 +173,7 @@ a {
   border: 1px solid transparent;
 }
 /*feature*/
-.feature-section{
+.feature{
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -229,7 +208,7 @@ a {
   margin-top: 10px;
 }
 /*work*/
-.section-work {
+.work {
   padding-bottom: 94px;
 }
 .work-title {
@@ -264,7 +243,7 @@ gap: 30px;
   justify-content: center;
 }
 /*command*/
-.section-command {
+.command {
   background-color: #f5f4fa;
   padding-top: 94px;
   padding-bottom: 94px;
@@ -345,7 +324,7 @@ gap: 30px;
   }
 }
 /*client*/
-.client-section{
+.client{
   padding-top: 94px;
   padding-bottom: 94px
 }
