--- a/css/main.css
+++ b/css/main.css
@@ -1,60 +1,8 @@
-:root {
-  --primer-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --white-color: #ffffff;
+@import url(./components/_page-header.scss);
+.body {
+  color: rebeccapurple;
 }
 
-img {
-  display: block;
-  height: auto;
-  width: 100%;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-}
-
-h1,
-h2,
-h3,
-p,
-li,
-a {
-  margin: 0;
-  padding: 0;
-}
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  font-family: Roboto, sans-serif;
-}
-
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-/*container*/
-.container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-/*header*/
 .page-header {
   border-bottom: solid 1px #ececec;
 }
@@ -68,17 +16,6 @@ a {
           align-items: center;
   padding-bottom: 0;
 }
-
-/*logo*/
-.logo {
-  display: inline-block;
-  font-family: Raleway, sans-serif;
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 100%;
-  color: #2196f3;
-}
-
 .main-nav__logo {
   color: var(--accent-color);
   font-family: Raleway, sans-serif;
@@ -93,23 +30,18 @@ a {
   font-size: 26px;
   line-height: 100%;
 }
-
-/*navigation*/
-.navigation {
+.main-nav .navigation {
   margin-left: 93px;
 }
-
-.navigation-list {
+.main-nav .navigation-list .navigation-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
-.navigation-list .navigation-item:not(:last-child) {
+.main-nav .navigation-list .navigation-list .navigation-item:not(:last-child) {
   margin-right: 50px;
 }
-
-.navigation-link {
+.main-nav-link {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -119,9 +51,7 @@ a {
   padding-bottom: 32px;
   padding-top: 32px;
 }
-
-.navigation-link:hover,
-.navigation-link:focus {
+.main-nav-link:focus, .main-nav-link:hover {
   color: var(--accent-color);
 }
 
@@ -131,11 +61,9 @@ a {
   display: flex;
   margin-left: auto;
 }
-
 .contact-item:not(:last-child) {
   margin-right: 50px;
 }
-
 .contact-link {
   color: #757575;
   font-weight: 500;
@@ -152,844 +80,13 @@ a {
       -ms-flex-align: center;
           align-items: center;
 }
-
-.contact-link:hover,
-.contact-link:focus {
-  color: var(--accent-color);
+.contact-link:focus, .contact-link:hover {
+  color: #2196f3;
 }
-
 .contact-icon {
   fill: #757575;
   margin-right: 10px;
 }
-
 .contact-link:hover .contact-icon {
-  fill: var(--accent-color);
-}
-
-/*hero*/
-.section-hero {
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4))), url(../images/background-image.jpg);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4)), url(../images/background-image.jpg);
-  height: 600px;
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-
-.hero-title {
-  color: var(--white-color);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  text-align: center;
-}
-
-.hero-button {
-  color: #ffffff;
-  background-color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 4px;
-  width: 200px;
-  height: 50px;
-  border: 1px solid transparent;
-}
-
-/*feature*/
-.feature-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.feature-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  padding-left: 0;
-  gap: 30px;
-}
-
-.feature-list .feature-item {
-  width: 270px;
-}
-
-.feature-background {
-  width: 270px;
-  height: 120px;
-  background-color: #f5f4fa;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.feature-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 100%;
-  margin-top: 30px;
-}
-
-.feature-text {
-  color: var(--primer-color);
-  font-size: 14px;
-  line-height: 1.71;
-  margin-top: 10px;
-}
-
-/*work*/
-.section-work {
-  padding-bottom: 94px;
-}
-
-.work-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.work-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
-}
-
-.work-list .work-item {
-  position: relative;
-}
-
-.work-service {
-  width: 100%;
-  height: 70px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 100%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-transform: uppercase;
-  color: var(--white-color);
-  bottom: 0;
-  right: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  position: absolute;
-  background-color: rgba(47, 48, 58, 0.8);
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-/*command*/
-.section-command {
-  background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.command-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.command-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
-  padding-left: 0;
-  text-align: center;
-  margin-top: 50px;
-}
-
-.command-item {
-  background-color: #ffffff;
-  border-radius: 4px;
-  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.command-employees {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.command-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.command-person {
-  color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 100%;
-}
-
-.command-description {
-  color: var(--primer-color);
-  font-size: 16px;
-  line-height: 100%;
-  margin-top: 10px;
-}
-
-/*social*/
-.social-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 10px;
-  margin-top: 16px;
-}
-
-.social-link:hover,
-.social-link:focus {
-  background-color: var(--accent-color);
-}
-
-.social-link:hover .social-icon,
-.social-link:focus .social-icon {
-  fill: var(--white-color);
-}
-
-.social-link {
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  padding: 0;
-  border: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  fill: #afb1b8;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-}
-
-.social-icon {
-  display: block;
-}
-
-/*client*/
-.client-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.client-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-}
-
-.client-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.client-item:hover {
-  border-color: var(--accent-color);
-}
-
-.client-link {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-}
-
-.client-icon {
-  fill: #afb1b8;
-}
-
-.client-link:hover,
-.client-link:focus {
-  border-color: var(--accent-color);
-}
-
-.client-link:hover .client-icon,
-.client-link:focus .client-icon {
-  fill: var(--accent-color);
-}
-
-/*footer*/
-.footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.footer-section {
-  background-color: #2f303a;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.footer {
-  margin-right: 70px;
-  width: 321px;
-}
-
-.footer-logo__accent {
-  color: var(--white-color);
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 100%;
-}
-
-.address {
-  margin-top: 20px;
-  margin-bottom: 9px;
-}
-
-.home-adress {
-  color: var(--white-color);
-  font-size: 14px;
-  line-height: 1.71;
-}
-
-.contact-link__footer {
-  color: #757575;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 100%;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-  margin-bottom: 9px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.footer-social {
-  margin-bottom: 12px;
-}
-
-.cta-title {
-  color: #ffffff;
-  font-size: 14px;
-  margin-bottom: 22px;
-}
-
-.footer-link__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 10px;
-}
-
-.footer-social__link {
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  display: block;
-  background-color: rgba(255, 255, 255, 0.1019607843);
-  padding: 0;
-  border: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
-}
-
-.footer-social__link:hover {
-  background-color: #2196f3;
-}
-
-.footer-social__icon {
-  fill: var(--white-color);
-}
-
-/*footer-form*/
-.footer-form {
-  margin-left: 93px;
-}
-
-.footer-form__option {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 20px;
-}
-
-.footer-form__field input:focus {
-  outline: none;
-}
-
-.footer-form__field label {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 100%;
-  color: var(--white-color);
-  text-transform: uppercase;
-  margin-bottom: 22px;
-}
-
-.footer-form__field {
-  display: block;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.footer-form__field input {
-  display: block;
-  border-radius: 4px;
-  border: 1px solid rgba(255, 255, 255, 0.3019607843);
-  background-color: #2f303a;
-  color: var(--white-color);
-  width: 358px;
-  height: 50px;
-  padding: 15px 16px;
-}
-
-.footer-form__field input:focus {
-  outline: none;
-}
-
-.footer-form__icon {
-  margin-left: 10px;
-  fill: var(--white-color);
-}
-
-.footer-form__button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: var(--accent-color);
-  color: var(--white-color);
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  padding: 10px 28px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border: 1px solid transparent;
-  margin-left: 12px;
-  cursor: pointer;
-}
-
-/*modal*/
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
-  background-color: var(--white-color);
-}
-
-.close-button {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  background-color: var(--white-color);
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.1019607843);
-  padding: 0;
-  cursor: pointer;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.close-button:hover {
-  fill: var(--accent-color);
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-/*MODAL-FORM*/
-.modal-form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-  padding: 40px;
-}
-
-.modal-form__field {
-  position: relative;
-}
-
-.modal-form__title {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 100%;
-}
-
-.modal-form__label {
-  margin-bottom: 4px;
-  margin-top: 10px;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 100%;
-  color: var(--primer-color);
-}
-
-.modal-form__input {
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  height: 40px;
-  padding-left: 42px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  width: 100%;
-}
-
-.modal-form__input:focus {
-  border-color: #2196f3;
-  outline: none;
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__icon {
-  position: absolute;
-  width: 18px;
-  height: 18px;
-  top: 11px;
-  left: 12px;
-  fill: #000000;
-}
-
-.modal-form__input:focus + .modal-form__icon {
-  fill: var(--accent-color);
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__textarea {
-  height: 120px;
-  width: 100%;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  padding: 12px 16px;
-  resize: none;
-}
-
-.modal-form__textarea:focus {
-  border-color: #2196f3;
-  outline: none;
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form__checkbox {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  color: var(--primer-color);
-  margin-top: 20px;
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.modal-checkbox__icon {
-  display: inline-block;
-  width: 16px;
-  height: 15px;
-  border-radius: 2px;
-  border: 2px solid black;
-  margin-right: 7px;
-  background-origin: border-box;
-  background-size: contain;
-}
-
-.modal-checkbox-input:checked + .modal-checkbox__icon {
-  background-image: url(../images/icon-check.svg);
-  background-color: var(--accent-color);
-  border-color: var(--accent-color);
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-checkbox-input {
-  position: absolute;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-
-.modal-button__option {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.modal-form__button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  background-color: var(--accent-color);
-  width: 200px;
-  height: 50px;
-  border: none;
-  color: var(--white-color);
-  border-radius: 4px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-left: 12px;
-  cursor: pointer;
-}
-
-.modal-agreement__link {
-  color: var(--accent-color);
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 100%;
-  text-decoration: underline;
-  margin-left: 5px;
-}
-
-/*filter*/
-.filter-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.filter-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 8px;
-  margin-bottom: 50px;
-}
-
-.filter-button {
-  color: var(--title-text-color);
-  background-color: #f5f4fa;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 4px;
-  border: transparent;
-  padding-top: 6px;
-  padding-right: 22px;
-  padding-bottom: 6px;
-  padding-left: 22px;
-  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.filter-button:hover {
-  color: var(--white-color);
-  background-color: var(--accent-color);
-  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-/*project*/
-.project {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 30px;
-}
-
-.project-description--accept {
-  position: relative;
-  overflow: hidden;
-}
-
-.project-description {
-  height: 294px;
-  width: 100%;
-  background-color: rgba(33, 150, 243, 0.8980392157);
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: var(--white-color);
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.55;
-  padding: 63px 24px;
-  opacity: 0;
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-}
-
-.project-item:hover .project-description {
-  opacity: 1;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-
-.project-content {
-  border-right: solid 1px #eeeeee;
-  border-bottom: solid 1px #eeeeee;
-  border-left: solid 1px #eeeeee;
-  padding-top: 20px;
-  padding-left: 24px;
-  padding-bottom: 20px;
-}
-
-.project-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-}
-
-.project-categories {
-  color: var(--primer-color);
-  font-size: 16px;
-  line-height: 1.88;
-  margin-top: 4px;
-}
-
-/*backdrop*/
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.1019607843);
-}
-
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
+  fill: #2196f3;
 }/*# sourceMappingURL=main.css.map */
