--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -18,4 +18,107 @@
   font-size: 26px;
   line-height: 100%;
   }
+  &-contact__link{
+  color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  transition-duration: 250ms;
+  margin-bottom: 9px;
+  display: flex;
+  align-items: center;
+  }
+  &-social{
+    margin-bottom: 12px;
+  }
+  &-link__list{
+      display: flex;
+  gap: 10px;
+  }
+  &-social__link{
+      width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: block;
+  background-color: #ffffff1a;
+  padding: 0;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-duration: 250ms;
+  &:hover, &:focus{
+     background-color: #2196f3;
+  }
+  }
+  &-social-icon{
+    fill: var(--white-color);
+  }
+}
+
+.address {
+  margin-top: 20px;
+  margin-bottom: 9px
+}
+.home-adress {
+  color: var(--white-color);
+  font-size: 14px;
+  line-height: 1.71;
+}
+.cta-title {
+  color: #ffffff;
+  font-size: 14px;
+  margin-bottom: 22px;
+}
+.footer-form{
+  margin-left: 93px;
+  &__option{
+      display: flex;
+  margin-top: 20px;
+  }
+  &__field label{
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  color: var(--white-color);
+  text-transform: uppercase;
+  margin-bottom: 22px;
+  }
+  &__field {
+  display: block;
+  flex-direction: column;
+}
+&__field input {
+  display: block;
+  border-radius: 4px;
+  border: 1px solid #ffffff4d;
+  background-color: #2f303a;
+  color: var(--white-color);
+  width: 358px;
+  height: 50px;
+  padding: 15px 16px;
+  &:focus{
+    outline: none;
+  }
+}
+&__icon {
+  margin-left: 10px;
+  fill: var(--white-color);
+}
+&__button {
+  display: flex;
+  background-color: var(--accent-color);
+  color: var(--white-color);
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  padding: 10px 28px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid transparent;
+  margin-left: 12px;
+}
 }
