--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,54 +1,8 @@
+@import url(./components/_page-header.scss);
 
-:root {
-  --primer-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --white-color: #ffffff;
+.body{
+  color: rebeccapurple;
 }
-img {
-  display: block;
-  height: auto;
-  width: 100%;
-}
-ul {
-  padding: 0;
-  margin: 0;
-}
-h1,
-h2,
-h3,
-p,
-li,
-a {
-  margin: 0;
-  padding: 0;
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-body {
-  font-family: Roboto, sans-serif;
-}
-
-ul {
-  list-style: none;
-}
-a {
-  text-decoration: none;
-}
-
-/*container*/
-.container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-/*header*/
 .page-header {
   border-bottom: solid 1px #ececec;
 }
@@ -56,19 +10,8 @@ a {
   display: flex;
   align-items: center;
   padding-bottom: 0;
-}
-/*logo*/
-
-.logo{
-    display: inline-block;
-    font-family: Raleway, sans-serif;
-    font-size: 26px;
-    font-weight: 700;
-    line-height: 100%;
-    color: #2196f3;
-  }
-
-.main-nav__logo{
+  &__logo
+    {
    color: var(--accent-color);
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -80,19 +23,21 @@ a {
   font-size: 26px;
   line-height: 100%;
  }
-
-/*navigation*/
-.navigation {
+  }
+  .navigation {
   margin-left: 93px;
-}
-
-.navigation-list {
+  &-list{
+    .navigation-list {
   display: flex;
-}
-.navigation-list .navigation-item:not(:last-child) {
-  margin-right: 50px;
-}
-.navigation-link {
+  & .navigation-item:not(:last-child){
+     margin-right: 50px;
+  }
+    }    
+   
+
+     
+}}
+&-link {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -104,16 +49,16 @@ a {
     color: var(--accent-color);
   }
 }
-
+}
 .contact {
   display: flex;
   margin-left: auto;
+&-item:not(:last-child){
+     margin-right: 50px;
 }
-.contact-item:not(:last-child) {
-  margin-right: 50px;
-}
-.contact-link {
-  color: #757575;
+
+&-link{
+     color: #757575;
   font-weight: 500;
   font-size: 14px;
   line-height: 100%;
@@ -123,633 +68,13 @@ a {
   display: flex;
   align-items: center;
   &:focus, &:hover{
-    color: var(--accent-color);
-  }
-
-
-.contact-icon {
-  fill: #757575;
+    color: #2196f3;
+}
+}
+&-icon{
+   fill: #757575;
   margin-right: 10px;
   .contact-link:hover &{
-    fill: var(--accent-color);
-  }
+    fill:#2196f3;
+  }  }
 }
-
-/*hero*/
-.hero {
-  background-image: linear-gradient(to right, #2f303a66),
-    url(../images/background-image.jpg);
-
-  height: 600px;
-  max-width: 1600px;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  flex-wrap: wrap;
-  text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-.hero-title {
-  color: var(--white-color);
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-transform: uppercase;
-  margin-bottom: 30px;
-  text-align: center;
-}
-.hero-button {
-  color: #ffffff;
-  background-color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 4px;
-  width: 200px;
-  height: 50px;
-  border: 1px solid transparent;
-}
-/*feature*/
-.feature{
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.feature-list {
-  display: flex;
-  flex-wrap: wrap;
-  padding-left: 0;
-  gap: 30px;
-}
-.feature-list .feature-item {
-  width: 270px;
-}
-.feature-background {
-  width: 270px;
-  height: 120px;
-  background-color: #f5f4fa;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.feature-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 100%;
-  margin-top: 30px;
-}
-.feature-text {
-  color: var(--primer-color);
-  font-size: 14px;
-  line-height: 1.71;
-  margin-top: 10px;
-}
-/*work*/
-.work {
-  padding-bottom: 94px;
-}
-.work-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-}
-.work-list{
-display: flex;
-gap: 30px;
-}
-.work-list .work-item {
-  position: relative;
-}
-.work-service {
-  width: 100%;
-  height: 70px;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 100%;
-  align-items: center;
-  text-transform: uppercase;
-  color: var(--white-color);
-  bottom: 0;
-  right: 0;
-  display: flex;
-  position: absolute;
-  background-color: #2f303acc;
-  justify-content: center;
-}
-/*command*/
-.command {
-  background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.command-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-}
-.command-list {
-  display: flex;
-  gap: 30px;
-  padding-left: 0;
-  text-align: center;
-  margin-top: 50px;
-}
-.command-item {
-  background-color: #ffffff;
-  border-radius: 4px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-.command-employees {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-.command-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-}
-.command-person {
-  color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 100%;
-}
-.command-description {
-  color: var(--primer-color);
-  font-size: 16px;
-  line-height: 100%;
-  margin-top: 10px;
-}
-/*social*/
-.social-list {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin-top: 16px;
-}
-
-
-.social-link {
-      width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    padding: 0;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: #afb1b8;
-  transition-duration: 250ms;
-  &:focus , &:hover{
-    background-color: var(--accent-color);
-  }
-}
-.social-icon {
-  display: block;
-  .social-link:hover &,
-  .social-link:focus &{
-    fill: var(--white-color);
-  }
-}
-/*client*/
-.client{
-  padding-top: 94px;
-  padding-bottom: 94px
-}
-.client-title{
-    color: var(--title-text-color);
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 100%;
-    text-align: center;
-    margin-bottom: 50px
-}
-.client-list{
-    display: flex;
-    gap: 30px;
-    justify-content: center;
-}
-.client-item:hover {
-  border-color: var(--accent-color);
-}
-.client-link {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  transition-duration: 250ms;
-  &:focus, &:hover {
-    border-color: var(--accent-color);
-  }
-}
-.client-icon {
-  fill: #afb1b8;
-  .client-link:hover &,
-  .client-link:focus &{
-    fill: var(--accent-color);
-  }
-}
-
-/*footer*/
-.footer-container {
-  display: flex;
-}
-.footer-section {
-  background-color: #2f303a;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  display: flex;
-  flex-wrap: wrap;
-}
-.footer{
-  margin-right: 70px;
-  width: 321px;
-}
-.footer-logo__accent{
-    color: var(--white-color);
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 100%;
-}
-.address {
-  margin-top: 20px;
-  margin-bottom: 9px
-}
-.home-adress {
-  color: var(--white-color);
-  font-size: 14px;
-  line-height: 1.71;
-}
-.contact-link__footer{
-  color: #757575;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 100%;
-  transition-duration: 250ms;
-  margin-bottom: 9px;
-  display: flex;
-  align-items: center;
-}
-.footer-social {
-  margin-bottom: 12px;
-}
-.cta-title {
-  color: #ffffff;
-  font-size: 14px;
-  margin-bottom: 22px;
-}
-.footer-link__list {
-  display: flex;
-  gap: 10px;
-}
-.footer-social__link {
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  display: block;
-  background-color: #ffffff1a;
-  padding: 0;
-  border: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition-duration: 250ms;
-  &:hover, &:focus{
-     background-color: #2196f3;
-  }
-}
-
-.footer-social__icon {
-  fill: var(--white-color);
-}
-/*footer-form*/
-.footer-form{
-  margin-left: 93px;
-}
-.footer-form__option {
-  display: flex;
-  margin-top: 20px;
-}
-
-.footer-form__field label {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 100%;
-  color: var(--white-color);
-  text-transform: uppercase;
-  margin-bottom: 22px;
-}
-.footer-form__field {
-  display: block;
-  flex-direction: column;
-}
-.footer-form__field input {
-  display: block;
-  border-radius: 4px;
-  border: 1px solid #ffffff4d;
-  background-color: #2f303a;
-  color: var(--white-color);
-  width: 358px;
-  height: 50px;
-  padding: 15px 16px;
-  &:focus{
-    outline: none;
-  }
-}
-
-.footer-form__icon {
-  margin-left: 10px;
-  fill: var(--white-color);
-}
-.footer-form__button {
-  display: flex;
-  background-color: var(--accent-color);
-  color: var(--white-color);
-  width: 200px;
-  height: 50px;
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  padding: 10px 28px;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid transparent;
-  margin-left: 12px;
-}
-/*modal*/
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
-  background-color: var(--white-color);
-}
-.close-button {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  background-color: var(--white-color);
-  border-radius: 50%;
-  border: 1px solid #0000001a;
-  padding: 0;
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  &:hover, &:focus{
-      fill: var(--accent-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-/*MODAL-FORM*/
-.modal-form {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 40px;
-}
-.modal-form__field {
-  position: relative;
-}
-.modal-form__title {
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 100%;
-}
-.modal-form__label {
-  margin-bottom: 4px;
-  margin-top: 10px;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 100%;
-  color: var(--primer-color);
-}
-.modal-form__input {
-  border: 1px solid #21212133;
-  border-radius: 4px;
-  height: 40px;
-  padding-left: 42px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  width: 100%;
-  &:focus{
-  border-color: #2196f3;
-  outline: none;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-.modal-form__icon {
-  position: absolute;
-  width: 18px;
-  height: 18px;
-  top: 11px;
-  left: 12px;
-  fill: #000000;
-  .modal-form__input:focus &{
-      fill: var(--accent-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-.modal-form__textarea {
-  height: 120px;
-  width: 100%;
-  border: 1px solid #21212133;
-  border-radius: 4px;
-  padding: 12px 16px;
-  resize: none;
-  &:focus{
-      border-color: #2196f3;
-  outline: none;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-.modal-form__checkbox {
-  display: flex;
-  align-items: center;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  color: var(--primer-color);
-  margin-top: 20px;
-  margin-bottom: 30px;
-  margin-left: auto;
-  margin-right: auto;
-}
-.modal-checkbox__icon {
-  display: inline-block;
-  width: 15px;
-  height: 16px;
-  border-radius: 2px;
-  border: 2px solid black;
-  margin-right: 7px;
-  background-origin: border-box;
-  background-size: contain;
-}
-.modal-checkbox-input:checked + .modal-checkbox__icon {
-  background-image: url(../images/icon-check.svg);
-  background-color: var(--accent-color);
-  border-color: var(--accent-color);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal-checkbox-input {
-  position: absolute;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-}
-.modal-button__option {
-  display: flex;
-  justify-content: center;
-}
-.modal-form__button {
-  display: flex;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  background-color: var(--accent-color);
-  width: 200px;
-  height: 50px;
-  border: none;
-  color: var(--white-color);
-  border-radius: 4px;
-  align-items: center;
-  justify-content: center;
-  margin-left: 12px;
-  cursor: pointer;
-}
-.modal-agreement__link {
-  color: var(--accent-color);
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 100%;
-  text-decoration: underline;
-  margin-left: 5px;
-}
-/*filter*/
-.filter-section{
-   padding-top: 94px;
-  padding-bottom: 94px;
-}
-.filter-list {
-  display: flex;
-  justify-content: center;
-  gap: 8px;
-  margin-bottom: 50px;
-}
-.filter-button {
-  color: var(--title-text-color);
-  background-color: #f5f4fa;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 4px;
-  border: transparent;
-  padding-top: 6px;
-  padding-right: 22px;
-  padding-bottom: 6px;
-  padding-left: 22px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  &:hover{
-      color: var(--white-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  }
-}
-
-/*project*/
-.project {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
-}
-
-.project-description{
-  height: 294px;
-  width: 100%;
-  background-color: #2196f3e5;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: var(--white-color);
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.55;
-  padding: 63px 24px;
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(100%);
-  &--accept{
-  position: relative;
-  overflow: hidden;
-  }
-  .project-item:hover &{
-  opacity: 1;
-  transform: translateY(0);
-  }
-}
-
-
-.project-content {
-  border-right: solid 1px #eeeeee;
-  border-bottom: solid 1px #eeeeee;
-  border-left: solid 1px #eeeeee;
-  padding-top: 20px;
-  padding-left: 24px;
-  padding-bottom: 20px;
-}
-.project-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-}
-.project-categories {
-  color: var(--primer-color);
-  font-size: 16px;
-  line-height: 1.88;
-  margin-top: 4px;
-}
-/*backdrop*/
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #0000001a;
-}
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;}
