--- a/sass/components/_feature.scss
+++ b/sass/components/_feature.scss
@@ -1,16 +1,17 @@
 .feature{
   padding-top: 94px;
   padding-bottom: 94px;
-  &-list{  display: flex;
+  &-list{  
+  display: flex;
   flex-wrap: wrap;
   padding-left: 0;
   gap: 30px;
-& .feature.item{
-    width: 270px;
 }
+&-item{
+  width: 270px;
 }
 &-background{
-      width: 270px;
+  width: 270px;
   height: 120px;
   background-color: #f5f4fa;
   display: flex;
@@ -18,14 +19,14 @@
   align-items: center;
 }
 &-title{
-     color: var(--title-text-color);
+  color:$TitleTextColor;
   font-weight: 700;
   font-size: 14px;
   line-height: 100%;
   margin-top: 30px; 
 }
 &-text{
-      color: var(--primer-color);
+  color:$PrimerColor;
   font-size: 14px;
   line-height: 1.71;
   margin-top: 10px;
