--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,3 +1,12 @@
+.modal{
+      position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 528px;
+    height: 581px;
+    background-color:$WhiteColor;
+}
 .modal-form {
   display: flex;
   flex-direction: column;
@@ -5,7 +14,10 @@
   padding: 40px;
   &__field {
   position: relative;
+  & input::placeholder {
+  margin-left: 15px;
 }
+  }
 &__title {
   align-items: center;
   justify-content: center;
@@ -20,7 +32,7 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 100%;
-  color: var(--primer-color);
+  color: $PrimerColor;
 }
 &__input {
   border: 1px solid #21212133;
@@ -43,8 +55,8 @@
   top: 11px;
   left: 12px;
   fill: #000000;
-  .modal-form__input:focus &{
-      fill: var(--accent-color);
+  .modal-form__input:focus + & {
+  fill: $AccentColor;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
@@ -67,7 +79,7 @@
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--primer-color);
+  color:$PrimerColor;
   margin-top: 20px;
   margin-bottom: 30px;
   margin-left: auto;
@@ -78,11 +90,11 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  background-color: var(--accent-color);
+  background-color:$AccentColor;
   width: 200px;
   height: 50px;
   border: none;
-  color: var(--white-color);
+  color:$WhiteColor;
   border-radius: 4px;
   align-items: center;
   justify-content: center;
@@ -103,8 +115,8 @@
 }
 .modal-checkbox-input:checked + .modal-checkbox__icon {
   background-image: url(../images/icon-check.svg);
-  background-color: var(--accent-color);
-  border-color: var(--accent-color);
+  background-color: $AccentColor;
+  border-color:$AccentColor;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-checkbox-input {
@@ -118,10 +130,29 @@
   justify-content: center;
 }
 .modal-agreement__link {
-  color: var(--accent-color);
+  color:$AccentColor;
   font-weight: 400;
   font-size: 14px;
   line-height: 100%;
   text-decoration: underline;
   margin-left: 5px;
+}
+.close-button {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color:$WhiteColor;
+  border-radius: 50%;
+  border: 1px solid #0000001a;
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &:hover, &:focus{
+fill: $AccentColor;
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
