--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -8,7 +8,7 @@
   margin-bottom: 50px;
   }
   &-button{
-      color: var(--title-text-color);
+      color: $TitleTextColor;
   background-color: #f5f4fa;
   font-weight: 500;
   font-size: 16px;
@@ -23,8 +23,8 @@
   padding-left: 22px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   &:hover{
-      color: var(--white-color);
-  background-color: var(--accent-color);
+      color: $WhiteColor;
+  background-color:$AccentColor;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
   }
