--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -2,23 +2,25 @@
     display: flex;
   flex-wrap: wrap;
   gap: 30px;
+  &-item{
+   position: relative;
+  }
   &-description{
-     height: 294px;
-  width: 100%;
-  background-color: #2196f3e5;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  color: var(--white-color);
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.55;
-  padding: 63px 24px;
-  opacity: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transform: translateY(100%);
+      height: 294px;
+    width: 100%;
+    background-color: #2196f3e5;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: $WhiteColor;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.55;
+    padding: 63px 24px;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(100%);
   &--accept{
   position: relative;
   overflow: hidden;
