--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './utils/variables';
+@import './base/base';
 @import './components/social-link';
 @import './components/body';
 @import './components/logo';
@@ -12,3 +13,5 @@
 @import './components/footer';
 @import './components/backdrop';
 @import './components/modal';
+@import './components/filter';
+@import './components/project';
