--- a/css/main.css
+++ b/css/main.css
@@ -61,14 +61,16 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover, .social-link:focus {
   background-color: #2196f3;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
 }
 .social-link:hover .social-icon, .social-link:focus .social-icon {
   fill: #ffffff;
-  -webkit-transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-          transition-duration: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list {
@@ -113,6 +115,8 @@ body {
 }
 .footer-social__link-hover {
   background-color: #2196f3;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
 }
 
 img {
@@ -229,8 +233,8 @@ a {
   font-weight: 500;
   font-size: 14px;
   line-height: 100%;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-bottom: 32px;
   padding-top: 32px;
 }
@@ -278,6 +282,8 @@ a {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-link:focus, .contact-link:hover {
   color: #2196f3;
@@ -507,14 +513,16 @@ a {
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  -webkit-transition-duration: 250ms;
-          transition-duration: 250ms;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-link:focus, .client-link:hover {
   border-color: #2196f3;
 }
 .client-icon {
   fill: #afb1b8;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .client-link:hover .client-icon, .client-link:focus .client-icon {
   fill: #2196f3;
@@ -945,6 +953,8 @@ a {
   padding-left: 22px;
   -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter-button:hover {
   color: #ffffff;
