--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -24,13 +24,14 @@
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition-duration: 250ms;
+  transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus, &:hover {
     border-color: $AccentColor;
   }
 }
 &-icon{
       fill: #afb1b8;
+      transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
   .client-link:hover &,
   .client-link:focus &{
     fill:$AccentColor;
