--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -22,6 +22,7 @@
   padding-bottom: 6px;
   padding-left: 22px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover{
       color: $WhiteColor;
   background-color:$AccentColor;
