--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -31,7 +31,7 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 100%;
-  transition-duration: 250ms;
+  transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-bottom: 32px;
   padding-top: 32px;
   &:focus, &:hover{
@@ -70,6 +70,7 @@
   padding-top: 32px;
   display: flex;
   align-items: center;
+  transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus, &:hover{
     color:$AccentColor;
 }
