--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,7 @@
 @import './utils/variables';
 @import './base/base';
 @import './components/social-link';
-@import './components/body';
+@import './components/button';
 @import './components/logo';
 @import './components/container';
 @import './components/page-header';
