--- a/css/main.css
+++ b/css/main.css
@@ -119,48 +119,18 @@ body {
           transition-duration: 250ms;
 }
 
-img {
-  display: block;
-  height: auto;
-  width: 100%;
-}
-
-ul {
-  padding: 0;
-  margin: 0;
-}
-
-h1,
-h2,
-h3,
-p,
-li,
-a {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  list-style-type: none;
-}
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-.section-title {
-  color: var(--title-text-color);
+.button {
+  color: #ffffff;
+  background-color: #2196f3;
   font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
+  font-size: 16px;
+  line-height: 1.88;
   text-align: center;
-  margin-bottom: 50px;
-}
-
-.section {
-  padding-bottom: 94px;
-  padding-top: 94px;
+  cursor: pointer;
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  border: 1px solid transparent;
 }
 
 .logo {
@@ -320,19 +290,6 @@ a {
   text-transform: uppercase;
   margin-bottom: 30px;
   text-align: center;
-}
-.hero-button {
-  color: #ffffff;
-  background-color: #2196f3;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 4px;
-  width: 200px;
-  height: 50px;
-  border: 1px solid transparent;
 }
 
 .feature {
