--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,6 @@
-.button {
-  color: #ffffff;
-  background-color: var(--accent-color);
+.button{
+ color: #ffffff;
+  background-color:$AccentColor;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -10,4 +10,4 @@
   width: 200px;
   height: 50px;
   border: 1px solid transparent;
-}/*# sourceMappingURL=.button.css.map */
+}
