--- a/css/main.css
+++ b/css/main.css
@@ -642,6 +642,7 @@ body {
           align-items: center;
   border: 1px solid transparent;
   margin-left: 12px;
+  cursor: pointer;
 }
 
 .contact-link__footer {
