--- a/sass/components/_command.scss
+++ b/sass/components/_command.scss
@@ -41,7 +41,7 @@
   line-height: 100%;
   }
   &-description{
-      color: var(--primer-color);
+      color:$PrimerColor;
   font-size: 16px;
   line-height: 100%;
   margin-top: 10px;
