--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -69,6 +69,8 @@
 .cta-title {
   color: #ffffff;
   font-size: 14px;
+  font-weight: 700;
+  line-height: 100%;
   margin-bottom: 22px;
 }
 .footer-form{
