--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -39,13 +39,13 @@
   padding-bottom: 20px;
   }
   &-title{
-      color: var(--title-text-color);
+      color:$TitleTextColor;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   }
   &-categories{
-     color: var(--primer-color);
+     color: $PrimerColor;
   font-size: 16px;
   line-height: 1.88;
   margin-top: 4px;
