--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,10 @@
 @import './utils/variables';
 @import './base/base';
+@import './components/button';
 @import './components/logo';
 @import './components/container';
 @import './components/page-header';
+@import './components/hero';
+@import './components/feature';
+@import './components/work';
+@import './components/command';
