--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,20 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+.button {
+  color: #ffffff;
+  background-color: #2196f3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  border: 1px solid transparent;
+}
+
 .logo {
   display: inline-block;
   font-family: Raleway, sans-serif;
@@ -98,4 +112,107 @@ body {
 }
 .menu-button.is-open .icon-menu {
   display: none;
+}
+
+@media screen and (max-width: 480px) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4))), url(../images/background-image.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4)), url(../images/background-image.jpg);
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+}
+.hero-title {
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.36;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+/*mobile style*/
+.feature {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.feature-background {
+  background-color: #f5f4fa;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  padding: 25px 195px;
+}
+.feature-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+.feature-title {
+  color: #212121;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  margin-top: 30px;
+  text-align: center;
+}
+.feature-text {
+  color: #757575;
+  font-size: 14px;
+  line-height: 1.71;
+  margin-top: 10px;
+}
+
+.work {
+  padding-bottom: 94px;
+}
+.work-title {
+  color: #212121;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  text-align: center;
+  margin-bottom: 50px;
+}
+.work-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+.work-list .work-item {
+  position: relative;
+}
+.work-service {
+  width: 100%;
+  height: 70px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  bottom: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  background-color: rgba(47, 48, 58, 0.8);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (max-width: 480px) {
+  .work {
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
