--- a/sass/components/_command.scss
+++ b/sass/components/_command.scss
@@ -1,49 +1,49 @@
-.command {
-  background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
-  &-title{
-    color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-  }
-  &-list{
-      display: flex;
-  gap: 30px;
-  padding-left: 0;
-  text-align: center;
-  margin-top: 50px;
-  }
-  &-item{
-      background-color: #ffffff;
-  border-radius: 4px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  }
-  &-employees{
-      padding-top: 30px;
-  padding-bottom: 30px;
-  }
-  &-title{
-      color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
-  text-align: center;
-  margin-bottom: 50px;
-  }
-  &-person{
-     color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 100%;
-  }
-  &-description{
-      color:$PrimerColor;
-  font-size: 16px;
-  line-height: 100%;
-  margin-top: 10px;
-  }
-}
+// .command {
+//   background-color: #f5f4fa;
+//   padding-top: 94px;
+//   padding-bottom: 94px;
+//   &-title{
+//     color: var(--title-text-color);
+//   font-weight: 700;
+//   font-size: 36px;
+//   line-height: 100%;
+//   text-align: center;
+//   margin-bottom: 50px;
+//   }
+//   &-list{
+//       display: flex;
+//   gap: 30px;
+//   padding-left: 0;
+//   text-align: center;
+//   margin-top: 50px;
+//   }
+//   &-item{
+//       background-color: #ffffff;
+//   border-radius: 4px;
+//   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+//   }
+//   &-employees{
+//       padding-top: 30px;
+//   padding-bottom: 30px;
+//   }
+//   &-title{
+//       color: var(--title-text-color);
+//   font-weight: 700;
+//   font-size: 36px;
+//   line-height: 100%;
+//   text-align: center;
+//   margin-bottom: 50px;
+//   }
+//   &-person{
+//      color: var(--title-text-color);
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: 100%;
+//   }
+//   &-description{
+//       color:$PrimerColor;
+//   font-size: 16px;
+//   line-height: 100%;
+//   margin-top: 10px;
+//   }
+// }
