--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,25 +1,36 @@
 .hero {
-  background-image: linear-gradient(to right, #2f303a66),
+  @media screen and (max-width: 480px) {
+     background-image: linear-gradient(to right, #2f303a66),
     url(../images/background-image.jpg);
-
-  height: 600px;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  display: flex;
-  flex-wrap: wrap;
-  text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
+   padding-top: 118px;
+  padding-bottom:118px ;
+  padding-right: 60px;
+  padding-left: 60px;
+  }
+ 
   &-title{
      color:$WhiteColor;
   font-weight: 900;
-  font-size: 44px;
+  font-size: 26px;
   line-height: 1.36;
   text-transform: uppercase;
   margin-bottom: 30px;
   text-align: center;
+ 
   }
+}
+
+
+//   display: flex;
+//   flex-wrap: wrap;
+//   text-align: center;
+//   padding-top: 200px;
+//   padding-bottom: 200px;
+  
+//   }
 
   
-}
+// }
