--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -1,41 +1,85 @@
 .client{
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top:60px;
+  padding-bottom: 60px;
+  &-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
   &-title{
-    color:$TitleTextColor;
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 100%;
     text-align: center;
-    margin-bottom: 50px
-  }
-  &-list{
-        display: flex;
-    gap: 30px;
-    justify-content: center;
+      }
+      &-item{
+        display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top:30px;
+    &:nth-child(2n+1) { margin-right:30px};
+      }
+      &-list{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
+      &-link{
+        width: 210px;
+   height: 92px;
+   border: 1px solid #afb1b8;
+ border-radius: 4px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+      }
+      &-icon{
+        fill: #afb1b8;
+      }
 }
-&-item:hover{
-     border-color:$AccentColor;}
-&-link{
-      align-items: center;
-  display: flex;
-  justify-content: center;
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-  transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:focus, &:hover {
-    border-color: $AccentColor;
-  }
-}
-&-icon{
-      fill: #afb1b8;
-      transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
-  .client-link:hover &,
-  .client-link:focus &{
-    fill:$AccentColor;
-}
-  }
-}
+
+
+
+
+
+
+
+
+// .client{
+//   padding-top: 94px;
+//   padding-bottom: 94px;
+//   &-title{
+//     color:$TitleTextColor;
+//     font-weight: 700;
+//     font-size: 36px;
+//     line-height: 100%;
+//     text-align: center;
+//     margin-bottom: 50px
+//   }
+//   &-list{
+//         display: flex;
+//     gap: 30px;
+//     justify-content: center;
+// }
+// &-item:hover{
+//      border-color:$AccentColor;}
+// &-link{
+//       align-items: center;
+//   display: flex;
+//   justify-content: center;
+//   width: 170px;
+//   height: 92px;
+//   border: 1px solid #afb1b8;
+//   border-radius: 4px;
+//   transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   &:focus, &:hover {
+//     border-color: $AccentColor;
+//   }
+// }
+// &-icon{
+//       fill: #afb1b8;
+//       transition:250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   .client-link:hover &,
+//   .client-link:focus &{
+//     fill:$AccentColor;
+// }
+//   }
+// }
   
