--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,8 @@
 @import './components/feature';
 @import './components/work';
 @import './components/command';
+@import './components/menu';
+@import './components/command';
+@import './components/social-link';
+@import './components/client';
+@import './components/footer';
