--- a/css/main.css
+++ b/css/main.css
@@ -85,14 +85,16 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 }
+
 @media screen and (max-width: 480px) {
   .container {
     width: 480px;
   }
 }
-
 .page-header {
   border-bottom: solid 1px #ececec;
+  position: relative;
+  padding: 16px 15px;
 }
 
 .menu-button {
@@ -103,6 +105,10 @@ body {
   margin: 0;
   border: none;
   background-color: transparent;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  z-index: 999;
 }
 .menu-button .icon-close {
   display: none;
@@ -112,6 +118,50 @@ body {
 }
 .menu-button.is-open .icon-menu {
   display: none;
+}
+
+.navigation {
+  margin-bottom: 302px;
+}
+.navigation-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+.navigation-link {
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 100%;
+  color: #212121;
+}
+
+.contact-item {
+  margin-bottom: 32px;
+}
+.contact-link {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 100%;
+  color: #757575;
+}
+.contact-link__number {
+  font-size: 24px;
+}
+.contact-icon {
+  display: none;
+}
+
+.social-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+  margin-top: 32px;
+  margin-bottom: 48px;
+}
+
+.social-link__header {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
 }
 
 @media screen and (max-width: 480px) {
@@ -215,4 +265,348 @@ body {
   .work {
     display: none;
   }
+}
+/*for phone*/
+.command {
+  background-color: #f5f4fa;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.command-title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.command-item {
+  background-color: #ffffff;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-bottom: 30px;
+}
+.command-employees {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+.command-person {
+  color: #212121;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+}
+.command-description {
+  color: #757575;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  margin-top: 10px;
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: white;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 40px;
+}
+.menu-container.is-open {
+  display: block;
+}
+
+/*for phone*/
+.command {
+  background-color: #f5f4fa;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.command-title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.command-item {
+  background-color: #ffffff;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-bottom: 30px;
+}
+.command-employees {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+}
+.command-person {
+  color: #212121;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+}
+.command-description {
+  color: #757575;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  margin-top: 10px;
+}
+
+.social-link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  padding: 0;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-link:hover, .social-link:focus {
+  background-color: #2196f3;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+.social-link:hover .social-icon, .social-link:focus .social-icon {
+  fill: #ffffff;
+}
+
+.social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 10px;
+  margin-top: 16px;
+}
+
+.social-icon {
+  display: block;
+  fill: #AFB1B8;
+}
+
+.footer-social__icon {
+  fill: #ffffff;
+}
+
+.footer-social__link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: block;
+  background-color: rgba(255, 255, 255, 0.1019607843);
+  padding: 0;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+.footer-social__link-hover {
+  background-color: #2196f3;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+}
+
+.client {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.client-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.client-title {
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 100%;
+  text-align: center;
+}
+.client-item {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-top: 30px;
+}
+.client-item:nth-child(2n+1) {
+  margin-right: 30px;
+}
+.client-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.client-link {
+  width: 210px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.client-icon {
+  fill: #afb1b8;
+}
+
+.footer-section {
+  background-color: #2f303a;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.footer-logo {
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.footer-social {
+  margin-top: 60px;
+  margin-bottom: 60px;
+}
+.footer-contact__link {
+  color: #757575;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.footer-social__link {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: block;
+  background-color: rgba(255, 255, 255, 0.1019607843);
+  padding: 0;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  margin-right: 10px;
+}
+.footer-link__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.address {
+  font-style: normal;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.home-adress {
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 1.71;
+  margin-bottom: 8px;
+}
+
+.cta-title {
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 100%;
+  margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer-form__option {
+  margin-top: 20px;
+}
+.footer-form__field label {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 100%;
+  color: #ffffff;
+  text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.footer-form__field input {
+  display: block;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3019607843);
+  background-color: #2f303a;
+  color: var(--white-color);
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 15px 16px;
+}
+.footer-form__field input:focus {
+  outline: none;
+}
+
+.form-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer-contact__link:not(:last-child) {
+  margin-bottom: 8px;
 }/*# sourceMappingURL=main.css.map */
