--- a/sass/components/_command.scss
+++ b/sass/components/_command.scss
@@ -1,3 +1,50 @@
+/*for phone*/
+.command{
+    background-color: #f5f4fa;
+    padding-top:60px ;
+    padding-bottom: 60px;
+    &-title{
+font-weight: 700;
+font-size: 28px;
+line-height: 100%;
+text-align: center;
+margin-bottom: 30px;
+    }
+    &-item{
+        background-color: #ffffff;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-bottom: 30px;
+    }
+    &-employees{
+         padding-top: 30px;
+         padding-bottom: 30px;
+         text-align: center;
+    }
+    &-person{
+ color:$TitleTextColor;
+   font-weight: 500;
+   font-size: 16px;
+ line-height: 100%;
+    }
+    &-description{
+         color:$PrimerColor;
+         font-weight: 400;
+   font-size: 16px;
+ line-height: 100%;
+   margin-top: 10px;
+    }
+}
+
+
+
+
+
+
+
+
+
+
 // .command {
 //   background-color: #f5f4fa;
 //   padding-top: 94px;
@@ -47,3 +94,5 @@
 //   margin-top: 10px;
 //   }
 // }
+
+
