--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -4,7 +4,9 @@
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-  @media screen and (max-width: 480px){
-    width: 480px;
   }
-}
+  @media screen and (max-width: 480px){
+  .container{
+    width: 480px;
+  }}
+  
