--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,5 +1,7 @@
 .page-header {
   border-bottom: solid 1px #ececec;
+  position: relative;
+  padding: 16px 15px;
 }
 .menu-button{
   display: inline-flex;
@@ -7,6 +9,10 @@
   margin: 0;
   border: none;
   background-color: transparent;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  z-index: 999;
   & .icon-close{
     display: none;
   }
@@ -17,7 +23,47 @@ display: block;
     display: none;
   }
 }
-
+.navigation{
+ margin-bottom: 302px;
+  &-item:not(:last-child){
+    margin-bottom: 32px;
+  }
+  &-link{
+        font-size: 40px;
+    font-weight: 500;
+    line-height: 100%;
+    color: #212121;
+  }
+}
+.contact{
+  &-item{
+    margin-bottom: 32px;
+  }
+  &-link{
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 100%;
+    color: #757575;
+  &__number{
+    font-size: 24px;
+    
+  }}
+    &-icon{
+      display: none;
+    }
+  
+}
+.social-header{
+  display: flex;
+  gap: 20px;
+      margin-top: 32px;
+    margin-bottom: 48px;
+}
+.social-link__header{
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+}
 // .main-nav {
 //   display: flex;
 //   align-items: center;
