--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,7 @@
 @import './components/social-link';
 @import './components/client';
 @import './components/footer';
+@import './components/backdrop';
+@import './components/modal';
+@import './components/filter';
+@import './components/project';
