--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -64,6 +64,20 @@ display: block;
   font-size: 18px;
   line-height: 22px;
 }
+.accent{
+  color: $AccentColor;
+  position: relative;
+  &::after{
+    content: "";
+    display: inline-block;
+    height: 4px;
+    width: 100%;
+    background-color:$AccentColor;
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+  }}
 // .main-nav {
 //   display: flex;
 //   align-items: center;
