--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -51,3 +51,12 @@
   margin-top: 4px;
   }
 }
+ @media screen and (max-width: 767px){
+  .project{
+    display: block;
+    &-item{
+      margin-bottom: 30px;
+    }
+  }
+  
+ }
